admin panel done

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -77,9 +77,21 @@
         </div>
 
         <div class="card">
+            <h3>🗑️ Manage Authors</h3>
+            <p>View the list of authors and delete if needed.</p>
+            <a th:href="@{/admin/authors}">Manage Authors</a>
+        </div>
+
+        <div class="card">
             <h3>📚 Browse Books</h3>
             <p>View the list of all books.</p>
             <a th:href="@{/books}">Browse</a>
+        </div>
+
+        <div class ="card">
+            <h3> Manage Books</h3>
+            <p> View the list and delete if needed</p>
+            <a th:href="@{/admin/books/index}">Manage Books</a>
         </div>
 
     </div>
