removing users and reviews by admin

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -94,6 +94,13 @@
             <a th:href="@{/admin/books/index}">Manage Books</a>
         </div>
 
+        <div class="card">
+            <h3>👥 Manage Users</h3>
+            <p>Browse users and manage their reviews.</p>
+            <a th:href="@{/admin/users}">Manage Users</a>
+        </div>
+
+
     </div>
 </div>
 
